# Real-Time-Chat

./: README.md  compose.yaml
.github/workflows/: build-and-deploy.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/2024-12-30-170648_create_users/: up.sql
backend/migrations/2024-12-30-171102_create_sessions/: up.sql
backend/migrations/2024-12-31-030203_create_contacts/: up.sql
backend/migrations/2025-01-01-111339_create_messages/: up.sql
backend/src/: auth.rs  lib.rs  main.rs  messaging.rs  models.rs  schema.rs  types.rs
backend/src/auth/: database.rs
backend/src/messaging/: contact.rs  messages.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: entry.server.tsx  root.tsx  sessions.server.tsx  tailwind.css
frontend/app/components/: ModeToggle.tsx  NavigationBar.tsx  theme-provider.tsx
frontend/app/components/ui/: button.tsx  switch.tsx  toggle.tsx
frontend/app/lib/: auth.server.ts  messaging.client.ts  messaging.server.ts  utils.ts
frontend/app/routes/: _index.tsx  action.set-theme.ts  api.toggleTheme.ts  login.tsx  signup.tsx
frontend/app/routes/chat/: ChatSection.tsx  ChatSectionFallback.tsx  ContactsList.tsx  ContactsListFallback.tsx  route.tsx
