[package]
name = "real-time-chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.11.0", features=["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
actix-ws = "0.3.0"
futures-util = "0.3.31"
serde_json = "1.0.134"
redis = { version = "0.27.6", features = ["r2d2"] }